Olgas first edit

--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "shell",
   "version": "1.0.0",
-  "description": "",
   "main": "bash.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -12,5 +11,14 @@
   "license": "ISC",
   "dependencies": {
     "nodemon": "^2.0.19"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/lyolyav/node-shell-flex.git"
+  },
+  "bugs": {
+    "url": "https://github.com/lyolyav/node-shell-flex/issues"
+  },
+  "homepage": "https://github.com/lyolyav/node-shell-flex#readme",
+  "description": ""
 }
